[package]
name = "zmq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.51"
bitflags = "1.3.2"
bytes = "1.0.1"
futures = "0.3.16"
libc = "0.2.99"

[build-dependencies]
bindgen = "0.59.1"

[[example]]
name = "req_serv"
path = "examples/req_rep/req/main.rs"

[[example]]
name = "rep_client"
path = "examples/req_rep/rep/main.rs"