[package]
name = "zmq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.51"
bitflags = "1.3.2"
bytes = "1.0.1"
futures = "0.3.16"
libc = "0.2.99"
rand = "0.8.4"

[build-dependencies]
bindgen = "0.59.1"

[[example]]
name = "helloworld_server"
path = "examples/ch01/helloworld_server/main.rs"

[[example]]
name = "helloworld_client"
path = "examples/ch01/helloworld_client/main.rs"

[[example]]
name = "wuserver"
path = "examples/ch01/wuserver/main.rs"

[[example]]
name = "wuclient"
path = "examples/ch01/wuclient/main.rs"

[[example]]
name = "version"
path = "examples/ch01/version/main.rs"

[[example]]
name = "taskvent"
path = "examples/ch01/taskvent/main.rs"

[[example]]
name = "taskwork"
path = "examples/ch01/taskwork/main.rs"

[[example]]
name = "tasksink"
path = "examples/ch01/tasksink/main.rs"

[[example]]
name = "msreader"
path = "examples/ch02/msreader/main.rs"

[[example]]
name = "mspoller"
path = "examples/ch02/mspoller/main.rs"

[[example]]
name = "rrclient"
path = "examples/ch02/rrclient/main.rs"

[[example]]
name = "rrworker"
path = "examples/ch02/rrworker/main.rs"

[[example]]
name = "rrbroker"
path = "examples/ch02/rrbroker/main.rs"
